Fixed the Z-indexing issue. The cells were not positioned. They need to be 'relative' ('absolute' messes it up)

--- a/battleship/css/game-style.css
+++ b/battleship/css/game-style.css
@@ -64,6 +64,7 @@ th, td {
     text-align: center;
     width: 9vh;
     height: 9vh;
+    color: transparent;         /* This hides the characters of the ship */
 }
 
 th {
@@ -77,7 +78,7 @@ th {
     width: 100%;
     height: 100%;
     pointer-events: none;
-    z-index: 10;
+    z-index: 0;                 /* This is z-index of 0, while gifs have z-index of 1  (Higher # = Closer to user) */
 }
 
 #ship-overlay img {
