--- a/battleship/css/gameplay-styles.css
+++ b/battleship/css/gameplay-styles.css
@@ -62,6 +62,7 @@ th, td {
     text-align: center;
     width: 9vh;
     height: 9vh;
+    color: transparent;     /* This hides the characters of the ship */
 }
 
 th {
@@ -75,7 +76,7 @@ th {
     width: 100%;
     height: 100%;
     pointer-events: none;
-    z-index: 10;
+    z-index: 0;         /* This is z-index of 0, while gifs have z-index of 1 (Higher # = Closer to user) */
 }
 
 #ship-overlay img {
